--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Base of title</title>
-    </head>
+    {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
         <div id="content">
