--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <title>Single page</title>
 </head>
 <body>
-  <h1>Welcome to a single page</h1>
+  <h1>Welcome to a default single page</h1>
   {{ .Content}}
 </body>
 </html>
