--- a/layouts/tutorial/single.html
+++ b/layouts/tutorial/single.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Tutorial Single page</title>
+  <title>Tutorial page</title>
 </head>
 <body>
   <h1>Welcome to a tutorial single page</h1>
