--- a/layouts/presentation/single.html
+++ b/layouts/presentation/single.html
@@ -16,8 +16,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				
+        {{ range .Resources.Match "*md" }}
+          <section>
+            {{ .Content }}
+          </section>
+        {{ end }}
 			</div>
 		</div>
 
