--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -14,6 +14,7 @@
   
   <div id="titleWrapper">
     <div id="title">
+      <a href="{{ .Parent.RelPermalink }}">Back</a>
       <h1>Erstellung von Pull Request</h1>
       <hr />
     </div>
