--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,5 +5,21 @@
 <body>
   <h1>Welcome to a default list page</h1>
   {{ .Content}}
+    <ul>
+  {{ range .Pages }}
+  
+      {{ if eq .Kind "section" }}
+        <li>
+          <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+          
+          {{ if .Params.Teaser }}
+              - {{ .Params.Teaser }}
+          {{ end }}
+          
+        </li>
+      {{ end }}
+
+  {{ end }}
+      </ul>
 </body>
 </html>
