--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
   {{ range .Pages }}
     <ul>
       <li>
-        <a href="{{ .RelPermalink }}">{{ .Title }}</a>
+        <a href="{{ .RelPermalink }}">{{ .Title }}</a> - {{ .Params.Teaser }}
       </li>
     </ul>
   {{ end }}
