--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,24 @@
 <html>
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+</head>
 <body>
-  <h1>Welcome!</h1>
+  <h1>{{ index (split .Site.Title " ") 0 }} <i>{{ index (split .Site.Title " ") 1 }}</i> </h1>
+  
+  <p>
+    <i class="{{ .Params.PrimaryLinkIcon }}"></i>
+    <a href="{{ .Params.PrimaryLinkHref }}" target="_blank"> {{ .Params.PrimaryLinkText }}</a>
+  </p>
+  
+  <p>
+    {{ .Params.Tagline }}
+  </p>
+  
+  <hr />
+  
   {{ .Content }}
   
+  <hr />
 
   {{ range .Pages }}
     <ul>
