--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-  <title>Single page</title>
+  <title>{{ .Title}}</title>
 </head>
 <body>
-  <h1>Welcome to a default single page</h1>
   {{ .Content}}
 </body>
 </html>
