--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -12,12 +12,10 @@
     
   </div>
   
-  <div id="titleWrapper">
-    <div id="title">
-      <a href="{{ .Parent.RelPermalink }}">Back</a>
-      <h1>Erstellung von Pull Request</h1>
-      <hr />
-    </div>
+  <div id="title" style="background: white; opacity: 1;">
+    <a href="{{ .Parent.RelPermalink }}">Back</a>
+    <h1>Erstellung von Pull Request</h1>
+    <hr />
   </div>
 
   
