--- a/static/tutorial/layout.css
+++ b/static/tutorial/layout.css
@@ -58,14 +58,10 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 0;
-  background: blue;
-  opacity: 1;
-}
-
-#titleWrapper {
-  height: 200px;
-  color: blue;
+  z-index: 1;
+  border-bottom-style: solid;
+  border-color: grey;
+  border-width: 1px;
 }
 
 /* Style page content */
