--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -13,7 +13,7 @@
     {{ $sectionId := 0 }}
     {{ range sort .Pages "File.Path" }}
         {{ $sectionId = add $sectionId 1 }}
-        <div class="card" data-section-id="{{ $sectionId }}">
+        <div class="sectionLink card" data-section-id="{{ $sectionId }}">
           <a href="#section-{{ $sectionId }}" onclick="setActive({{ $sectionId }})">
           <div class="card-body">
             {{ .Title }}
@@ -37,15 +37,17 @@
         {{ $sectionId := 0 }}
         {{ range sort .Pages "File.Path" }}
             {{ $sectionId = add $sectionId 1 }}
-            <div class="anchorContainer">
-              <a id="section-{{ $sectionId }}">&nbsp;</a>
-            </div>
-            <div data-section-id="{{ $sectionId }}">
-              <div class="card">
-                <h5 class="card-title">{{ .Title }}</h5>
-                <div class="card-body">
-                    {{ .Content }}
-                </div>
+            <div class="section" data-section-id="{{ $sectionId }}">
+              <div class="anchorContainer">
+                <a id="section-{{ $sectionId }}">&nbsp;</a>
+              </div>
+              <div data-section-id="{{ $sectionId }}">
+                <div class="card">
+                  <h5 class="card-title">{{ .Title }}</h5>
+                  <div class="card-body">
+                      {{ .Content }}
+                  </div>
+                </div>              
               </div>              
             </div>
         {{ end }}
