--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -14,10 +14,10 @@
     {{ range sort .Pages "File.Path" }}
         {{ $sectionId = add $sectionId 1 }}
         <div class="sectionLink card" data-section-id="{{ $sectionId }}">
-          <a href="#section-{{ $sectionId }}" onclick="setActive({{ $sectionId }})">
-          <div class="card-body">
-            {{ .Title }}
-          </div>
+          <a href="#section-{{ $sectionId }}" onclick="setActiveSection({{ $sectionId }})">
+            <div class="card-body">
+              {{ .Title }}
+            </div>
           </a>
         </div>
     {{ end }}
