--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -5,6 +5,7 @@
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -24,8 +25,8 @@
   </div>
   
   <div id="title" style="background: white; opacity: 1;">
-    <a href="{{ .Parent.RelPermalink }}">Back</a>
-    <h1>Erstellung von Pull Request</h1>
+    <a href="{{ .Parent.RelPermalink }}"><i class="fas fa-times"></i></a>
+    <span>{{ .Title }}</span>
   </div>
 
   <div class="row">
