--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -62,10 +62,12 @@
                                 </tr>
                               </thead>
                               <tbody>
+                                {{ $rowCounter := 0 }}
                                 {{ range .Pages }}
+                                  {{ $rowCounter = add $rowCounter 1 }}
                                   <tr>
-                                    <th scope="row">N</th>
-                                    <td><a href="#">xxx</a></td>
+                                    <th scope="row">{{ $rowCounter }}</th>
+                                    <td><a href="{{ .RelPermalink }}">{{ .Title }}</a></td>
                                   </tr>
                                 {{ end }}
                               </tbody>
