--- a/static/tutorial/layout.css
+++ b/static/tutorial/layout.css
@@ -59,6 +59,22 @@
   /* background-color: yellow; */
 }
 
+#toc .dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
+  margin-right: 7px;
+  font-size: 12pt;
+}
+
+#toc .visited .dot {
+  background-color: #0B6138;
+  color: white;
+}
+
 #title {
   position: fixed;
   top: 0;
