--- a/layouts/tutorial/list.html
+++ b/layouts/tutorial/list.html
@@ -15,7 +15,7 @@
     <span>{{ .Title }}</span>
   </div>
 
-  <div class="row">
+  <div class="row" style="margin: 0px;">
     <div id="tocPlaceholder" class="col col-2">
       <!-- Placeholder for navbar -->
     </div>
